--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "ant-design-vue": "^1.7.4",
     "core-js": "^3.6.5",
+    "postcss-px2rem": "^0.3.0",
     "vue": "^2.6.11",
+    "vue-qr": "^2.3.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -18,6 +22,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
